Add favicon.ico to the public/favicon directory

--- a/content/blog/bolt-diy-setup-guide.mdx
+++ b/content/blog/bolt-diy-setup-guide.mdx
@@ -1,7 +1,7 @@
 ---
 title: "bolt.diy: The Future of Development Environments"
 publishedAt: '2024-12-31'
-author: 'Silverthread Labs'
+author: 'Hassan Mughal'
 image: "/assets/blog/bolt/bolt.webp"
 ogImage:
   url: "/assets/blog/bolt/bolt.webp"
