--- a/content/blog/deepseek-ai-revolution.mdx
+++ b/content/blog/deepseek-ai-revolution.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Deepseek's Revolutionary AI Model the Future"
 publishedAt: '2024-07-08'
-author: 'Silverthread Labs'
+author: 'Hassan Mughal'
 image: "/assets/blog/deepseek/deepseek.webp"
 ogImage:
   url: "/assets/blog/deepseek/deepseek.webp"
