--- a/content/blog/nvidia-share-drop.mdx
+++ b/content/blog/nvidia-share-drop.mdx
@@ -2,7 +2,7 @@
 title: "Nvidia's Market Shift: The Deepseek Effect"
 publishedAt: "2024-12-21T08:00:00.000Z"
 author:
-  name: "Silverthread Labs"
+  name: "Hassan Mughal"
   picture: "/assets/blog/authors/tech-insights.jpeg"
 image: "/assets/blog/nvidia/nvidia.webp"
 ogImage:
