--- a/content/docs/getting-started-with-nextjs-shopify-commerce-starter.mdx
+++ b/content/docs/getting-started-with-nextjs-shopify-commerce-starter.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Getting Started: Shopify + Next.js Commerce Starter"
 publishedAt: '2025-11-10'
-author: 'Silverthread Labs'
+author: 'Hassan Mughal'
 image: '/assets/thumbnail.png'
 ogImage:
   url: '/assets/thumbnail.png'
@@ -29,8 +29,8 @@ corepack enable; corepack prepare pnpm@latest --activate
 ## 1) Clone the repository
 
 ```powershell
-git clone https://github.com/Jaffer720/bloggen-comerce-starter.git
-cd bloggen-comerce-starter
+git clone https://github.com/Jaffer720/nextjs-shopify-commerce-starter.git
+cd nextjs-shopify-commerce-starter
 pnpm install
 ```
 
